# high-quality-bot

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.sim  LICENSE  README.md  build.rs  docker-compose.yml
.github/workflows/: docker.yml  submodule-auto-update.yml
migrations/: 001_initial.sql  002_iss_telemetry_history.sql
scripts/: decode_wowsims_proto.py
src/: db.rs  iss_telemetry.rs  iss_telemetry_tracker.rs  main.rs  mop_proto.rs  parsing.rs  sim_runtime.rs  sim_runtime_targets.rs
src/commands/: class.rs  dailies.rs  health.rs  mod.rs  piss.rs  pisshistory.rs  pisstory.rs  sim.rs  status.rs  version.rs
