[package]
name = "high-quality-bot"
version = "0.1.0"
edition = "2024"

[features]
default = ["mop-proto"]
mop-proto = ["dep:prost"]

[dependencies]
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "chrono", "ttf"] }
image = { version = "0.24", default-features = false, features = ["png"] }
prost = { version = "0.12", optional = true }
prost-reflect = { version = "0.13", features = ["serde"] }

[build-dependencies]
prost-build = "0.12"
time = { version = "0.3", features = ["formatting"] }
